Fixed events alignment on smaller screens

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -289,6 +289,7 @@ html {
 }
 
 #content #featured-section { 
+  margin: 0;
   clear:both;
   float:left;
   width:100%;
@@ -309,8 +310,10 @@ html {
   * Also is better for smaller screens because it pops
   * overflowed cards to the next row
   */
-  padding-left: 0em;
+  padding: 0;
   display: grid;
+  justify-content: center;
+  align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(200px ,30%));
   gap: 10px;
 
